--- a/package.json
+++ b/package.json
@@ -10,27 +10,34 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
+    "@faker-js/faker": "^9.0.1",
     "@prisma/client": "^5.19.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@supabase/supabase-js": "^2.45.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
     "lucide-react": "^0.438.0",
-    "next": "14.2.7",
+    "next": "^14.2.12",
     "next-themes": "^0.3.0",
     "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
+    "react-share": "^5.1.0",
     "store": "file:",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.3"
+    "use-debounce": "^10.0.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
